--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 </head>
 
 <body class="fixed Center">
-    <div class="fixed top-0 left-0">
-        <div id="stars" class="opacity-100"></div>
-        <div id="stars2" class="opacity-20"></div> <!-- <div id="stars3" class="opacity-20"></div> -->
-    </div>
+    <!-- <div class="fixed top-0 left-0"> -->
+    <!-- <div id="stars" class="opacity-100"></div> -->
+    <!-- <div id="stars2" class="opacity-20"></div> <div id="stars3" class="opacity-20"></div> -->
+    <!-- </div> -->
     <main class="md:absolute z-10 Container"> </main>
 </body>
 
