--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <link rel="stylesheet" href="/Portafolio/astro/index.6fef85b0.css" />
 </head>
 
-<body class="fixed Center">
-    <!-- <div class="fixed top-0 left-0"> -->
-    <!-- <div id="stars" class="opacity-100"></div> -->
-    <!-- <div id="stars2" class="opacity-20"></div> <div id="stars3" class="opacity-20"></div> -->
-    <!-- </div> -->
-    <main class="md:absolute z-10 Container"> </main>
+<body class="Center">
+    <div class="absolute top-0 left-0">
+        <div id="stars" class="opacity-100"></div>
+        <div id="stars2" class="opacity-20"></div> <!-- <div id="stars3" class="opacity-20"></div> -->
+    </div>
+    <main class="absolute z-10 Container"> </main>
 </body>
 
 </html> <!-- <Landing /> -->
