--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/Portafolio/astro/index.css" />
 </head>
 
-<body class="Center bg-gradient-to-b from-slate-950 to-slate-900">
+<body class="Center bg-slate-950">
     <div class="absolute top-0 left-0">
         <div id="stars" class="opacity-100"></div>
         <div id="stars2" class="opacity-20"></div> <!-- <div id="stars3" class="opacity-20"></div> -->
